// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render button 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="md"
    />
  </View>
</View>
`;

exports[`<Button /> should render button when rounded 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 22.5,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 22.5,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="md"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with children 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="[object Object]"
      buttonVariant="primary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="[object Object]"
      variant="md"
    >
      <Text
        accessibilityLabel="Test"
        lineHeightVariant="min"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontSize": 15,
              "lineHeight": 15,
            },
          ]
        }
        testID="Test"
        variant="md"
      >
        Test
      </Text>
    </Text>
  </View>
</View>
`;

exports[`<Button /> should render button with contrast 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="md"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with custom accessibility label 1`] = `
<View
  accessibilityLabel="testing"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="md"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with custom style 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {
          "backgroundColor": "#2980b9",
        },
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="md"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with custom text style 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {
            "color": "#2980b9",
          },
        ]
      }
      testID="undefined"
      variant="md"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with disabled 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={true}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF70",
          "borderColor": "#007AFF70",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={true}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="md"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with loading 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "aspectRatio": 1,
          },
          undefined,
          Array [
            Object {},
            Object {
              "alignSelf": "center",
              "width": 55,
            },
          ],
        ]
      }
    >
      <View
        accessibilityLabel="Aguarde"
        autoPlay={true}
        cacheComposition={true}
        collapsable={false}
        contrast={false}
        enableMergePathsAndroidForKitKatAndAbove={false}
        forwardedRef={[Function]}
        loop={true}
        nativeID="animatedComponent"
        onAnimationFinish={[Function]}
        onLayout={[Function]}
        progress={0}
        resizeMode="contain"
        sourceJson="{\\"v\\":\\"5.5.5\\",\\"fr\\":60,\\"ip\\":0,\\"op\\":60,\\"w\\":375,\\"h\\":375,\\"nm\\":\\"dots-loader\\",\\"ddd\\":0,\\"assets\\":[],\\"layers\\":[{\\"ddd\\":0,\\"ind\\":1,\\"ty\\":4,\\"nm\\":\\"Shape Layer 3\\",\\"sr\\":1,\\"ks\\":{\\"o\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"t\\":20,\\"s\\":[100]},{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"t\\":40,\\"s\\":[70]},{\\"t\\":60,\\"s\\":[99]}],\\"ix\\":11},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":10},\\"p\\":{\\"a\\":0,\\"k\\":[250,187,0],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[-101.84,-18.84,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100,100],\\"ix\\":6}},\\"ao\\":0,\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"it\\":[{\\"d\\":1,\\"ty\\":\\"el\\",\\"s\\":{\\"a\\":0,\\"k\\":[43.32,43.32],\\"ix\\":2},\\"p\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":3},\\"nm\\":\\"Ellipse Path 1\\",\\"mn\\":\\"ADBE Vector Shape - Ellipse\\",\\"hd\\":false},{\\"ty\\":\\"fl\\",\\"c\\":{\\"a\\":0,\\"k\\":[1,1,1,1],\\"ix\\":4},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":5},\\"r\\":1,\\"bm\\":0,\\"nm\\":\\"Fill 1\\",\\"mn\\":\\"ADBE Vector Graphic - Fill\\",\\"hd\\":false},{\\"ty\\":\\"tr\\",\\"p\\":{\\"a\\":0,\\"k\\":[-100.84,-18.84],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100],\\"ix\\":3},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":6},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":7},\\"sk\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":4},\\"sa\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":5},\\"nm\\":\\"Transform\\"}],\\"nm\\":\\"Ellipse 1\\",\\"np\\":3,\\"cix\\":2,\\"bm\\":0,\\"ix\\":1,\\"mn\\":\\"ADBE Vector Group\\",\\"hd\\":false}],\\"ip\\":0,\\"op\\":180,\\"st\\":0,\\"bm\\":0},{\\"ddd\\":0,\\"ind\\":2,\\"ty\\":4,\\"nm\\":\\"Shape Layer 2\\",\\"sr\\":1,\\"ks\\":{\\"o\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"t\\":10,\\"s\\":[100]},{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"t\\":30,\\"s\\":[60]},{\\"t\\":50,\\"s\\":[100]}],\\"ix\\":11},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":10},\\"p\\":{\\"a\\":0,\\"k\\":[187,187,0],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[-100.84,-18.84,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100,100],\\"ix\\":6}},\\"ao\\":0,\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"it\\":[{\\"d\\":1,\\"ty\\":\\"el\\",\\"s\\":{\\"a\\":0,\\"k\\":[43.32,43.32],\\"ix\\":2},\\"p\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":3},\\"nm\\":\\"Ellipse Path 1\\",\\"mn\\":\\"ADBE Vector Shape - Ellipse\\",\\"hd\\":false},{\\"ty\\":\\"fl\\",\\"c\\":{\\"a\\":0,\\"k\\":[1,1,1,1],\\"ix\\":4},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":5},\\"r\\":1,\\"bm\\":0,\\"nm\\":\\"Fill 1\\",\\"mn\\":\\"ADBE Vector Graphic - Fill\\",\\"hd\\":false},{\\"ty\\":\\"tr\\",\\"p\\":{\\"a\\":0,\\"k\\":[-100.84,-18.84],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100],\\"ix\\":3},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":6},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":7},\\"sk\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":4},\\"sa\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":5},\\"nm\\":\\"Transform\\"}],\\"nm\\":\\"Ellipse 1\\",\\"np\\":3,\\"cix\\":2,\\"bm\\":0,\\"ix\\":1,\\"mn\\":\\"ADBE Vector Group\\",\\"hd\\":false}],\\"ip\\":0,\\"op\\":180,\\"st\\":0,\\"bm\\":0},{\\"ddd\\":0,\\"ind\\":3,\\"ty\\":4,\\"nm\\":\\"Shape Layer 1\\",\\"sr\\":1,\\"ks\\":{\\"o\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"t\\":0,\\"s\\":[100]},{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"t\\":20,\\"s\\":[60]},{\\"t\\":40,\\"s\\":[100]}],\\"ix\\":11},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":10},\\"p\\":{\\"a\\":0,\\"k\\":[123,187,0],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[-100.84,-18.84,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100,100],\\"ix\\":6}},\\"ao\\":0,\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"it\\":[{\\"d\\":1,\\"ty\\":\\"el\\",\\"s\\":{\\"a\\":0,\\"k\\":[43.32,43.32],\\"ix\\":2},\\"p\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":3},\\"nm\\":\\"Ellipse Path 1\\",\\"mn\\":\\"ADBE Vector Shape - Ellipse\\",\\"hd\\":false},{\\"ty\\":\\"fl\\",\\"c\\":{\\"a\\":0,\\"k\\":[1,1,1,1],\\"ix\\":4},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":5},\\"r\\":1,\\"bm\\":0,\\"nm\\":\\"Fill 1\\",\\"mn\\":\\"ADBE Vector Graphic - Fill\\",\\"hd\\":false},{\\"ty\\":\\"tr\\",\\"p\\":{\\"a\\":0,\\"k\\":[-100.84,-18.84],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100],\\"ix\\":3},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":6},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":7},\\"sk\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":4},\\"sa\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":5},\\"nm\\":\\"Transform\\"}],\\"nm\\":\\"Ellipse 1\\",\\"np\\":3,\\"cix\\":2,\\"bm\\":0,\\"ix\\":1,\\"mn\\":\\"ADBE Vector Group\\",\\"hd\\":false}],\\"ip\\":0,\\"op\\":180,\\"st\\":0,\\"bm\\":0}],\\"markers\\":[]}"
        speed={1}
        style={
          Object {
            "alignSelf": "center",
            "aspectRatio": 1,
            "height": "100%",
            "width": 55,
          }
        }
        testID="loading"
        variant="button"
      />
    </View>
  </View>
</View>
`;

exports[`<Button /> should render button with test id 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="md"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with typography variant 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="primary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="primary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 17,
            "lineHeight": 17,
          },
          Object {
            "color": "#fff",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="lg"
    />
  </View>
</View>
`;

exports[`<Button /> should render button with variant 1`] = `
<View
  accessibilityLabel=""
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 4,
      "opacity": 1,
    }
  }
  testID="testing"
>
  <View
    buttonVariant="secondary"
    disabled={false}
    flat={false}
    hasBorder={false}
    rounded={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#153164",
          "borderColor": "#153164",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "maxWidth": "100%",
          "minWidth": 180,
          "overflow": "hidden",
          "paddingBottom": 4,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 4,
        },
        Object {},
      ]
    }
  >
    <Text
      accessibilityLabel="undefined"
      buttonVariant="secondary"
      disabled={false}
      flat={false}
      lineHeightVariant="min"
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 15,
          },
          Object {
            "color": "#F8F9FA",
            "fontWeight": "bold",
            "letterSpacing": 0.4,
          },
          Object {},
        ]
      }
      testID="undefined"
      variant="md"
    />
  </View>
</View>
`;
